# despot

./: CMakeLists.txt  README.md
examples/cpp_models/POMDP/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile
examples/cpp_models/POMDP/src/: Clothoid.cpp  POMDP.cpp  POMDP.h  POMDPrviz.cpp  POMDPrviz1.cpp  POMDPrviz2.cpp  POMDPrviz3.cpp  main.cpp  spline.cpp
examples/cpp_models/adventurer/src/: adventurer.cpp  adventurer.h
examples/cpp_models/bridge/src/: bridge.cpp  bridge.h
examples/cpp_models/chain/src/: chain.cpp  chain.h
examples/cpp_models/navigation/src/: navigation.cpp  navigation.h
examples/cpp_models/pocman/src/: pocman.cpp  pocman.h
examples/cpp_models/reg_demo/src/: reg_demo.cpp  reg_demo.h
examples/cpp_models/rock_sample/src/base/: base_rock_sample.cpp  base_rock_sample.h
examples/cpp_models/simple_rock_sample/src/: simple_rock_sample.cpp  simple_rock_sample.h
examples/cpp_models/tag/src/base/: base_tag.cpp  base_tag.h
examples/cpp_models/tiger/src/: tiger.cpp  tiger.h
include/despot/: evaluator.h  simple_tui.h
include/despot/core/: belief.h  node.h  pomdp.h  solver.h
include/despot/ippc/: client.h
include/despot/pomdpx/: pomdpx.h
src/: evaluator.cpp  simple_tui.cpp
src/core/: belief.cpp  node.cpp
src/ippc/: client.cpp
src/pomdpx/: pomdpx.cpp
src/solver/: aems.cpp  despot.cpp
